--- a/app/src/main/res/layout/fragment_property_detail.xml
+++ b/app/src/main/res/layout/fragment_property_detail.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        xmlns:tools="http://schemas.android.com/tools">
+<data>
+<variable
+        name="propertyId"
+        type="String" />
+</data>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-            android:layout_centerInParent="true"
-            android:id="@+id/text_view_property_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="3hjk12h3k12" />
-
-</RelativeLayout>
+        <TextView
+                android:text="@{propertyId}"
+                android:layout_centerInParent="true"
+                android:id="@+id/text_view_property_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="3hjk12h3k12" />
+    </RelativeLayout>
+</layout>
