--- a/app/src/main/res/layout/list_item_property_premium.xml
+++ b/app/src/main/res/layout/list_item_property_premium.xml
@@ -1,114 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+                name="property"
+                type="com.example.peter.kpropertiesmvvm.repository.model.Property"/>
+    </data>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/card_view_root"
-    android:layout_margin="8dp">
-
-    <RelativeLayout
-        android:id="@+id/relative_layout_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:paddingTop="12dp"
-            android:id="@+id/image_view"
-            tools:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"/>
-
-        <LinearLayout
-            android:layout_below="@id/image_view"
-            android:layout_margin="16dp"
+    <android.support.v7.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:id="@+id/card_view_root"
+            android:layout_margin="8dp">
 
-            <TextView
-                android:textColor="@android:color/black"
-                android:id="@+id/text_view_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                tools:text="$200000" />
-
-            <TextView
-                android:layout_marginTop="4dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:id="@+id/text_view_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                tools:text="3 Bedroom plus media Terraceeeeeeee" />
-
-            <TextView
-                android:layout_marginTop="8dp"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:id="@+id/text_view_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                tools:text="123 Evergreen Terrace" />
-
-            <TextView
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:id="@+id/text_view_address_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                tools:text="SpringField 2766" />
-
-            <LinearLayout
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
+        <RelativeLayout
+                android:id="@+id/relative_layout_root"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:textStyle="bold"
-                    android:drawablePadding="4dp"
-                    android:gravity="center"
-                    android:drawableStart="@drawable/ic_bed"
-                    android:drawableLeft="@drawable/ic_bed"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    tools:text="1"
-                    android:id="@+id/text_view_num_bedrooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            <ImageView
+                    app:imageUrl="@{property.imageUrl}"
+                    android:paddingTop="12dp"
+                    android:id="@+id/image_view"
+                    tools:background="@color/colorPrimary"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"/>
+
+            <LinearLayout
+                    android:layout_below="@id/image_view"
+                    android:layout_margin="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                 <TextView
-                    android:textStyle="bold"
-                    android:drawablePadding="4dp"
-                    android:gravity="center"
-                    android:drawableStart="@drawable/ic_tub"
-                    android:drawableLeft="@drawable/ic_tub"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    tools:text="1"
-                    android:id="@+id/text_view_num_bathrooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                        android:text="@{@string/prefix_dollar_sign(property.displayPrice)}"
+                        android:textColor="@android:color/black"
+                        android:id="@+id/text_view_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        tools:text="$200000"/>
 
                 <TextView
-                    android:textStyle="bold"
-                    android:drawablePadding="4dp"
-                    android:gravity="center"
-                    android:drawableStart="@drawable/ic_car"
-                    android:drawableLeft="@drawable/ic_car"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    tools:text="1"
-                    android:id="@+id/text_view_num_car_spaces"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                        android:text="@{property.description}"
+                        android:layout_marginTop="4dp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:id="@+id/text_view_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+                        tools:text="3 Bedroom plus media Terraceeeeeeee"/>
+
+                <TextView
+                        android:text="@{property.address1}"
+                        android:layout_marginTop="8dp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:id="@+id/text_view_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        tools:text="123 Evergreen Terrace"/>
+
+                <TextView
+                        android:text="@{property.address2}"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:id="@+id/text_view_address_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        tools:text="SpringField 2766"/>
+
+                <LinearLayout
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <TextView
+                            android:text="@{String.valueOf(property.bedrooms)}"
+                            android:textStyle="bold"
+                            android:drawablePadding="4dp"
+                            android:gravity="center"
+                            android:drawableStart="@drawable/ic_bed"
+                            android:drawableLeft="@drawable/ic_bed"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginLeft="8dp"
+                            tools:text="1"
+                            android:id="@+id/text_view_num_bedrooms"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:text="@{String.valueOf(property.bathrooms)}"
+                            android:textStyle="bold"
+                            android:drawablePadding="4dp"
+                            android:gravity="center"
+                            android:drawableStart="@drawable/ic_tub"
+                            android:drawableLeft="@drawable/ic_tub"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginLeft="16dp"
+                            tools:text="1"
+                            android:id="@+id/text_view_num_bathrooms"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:text="@{String.valueOf(property.carSpace)}"
+                            android:textStyle="bold"
+                            android:drawablePadding="4dp"
+                            android:gravity="center"
+                            android:drawableStart="@drawable/ic_car"
+                            android:drawableLeft="@drawable/ic_car"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginLeft="16dp"
+                            tools:text="1"
+                            android:id="@+id/text_view_num_car_spaces"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</layout>
